--- a/demo/public/index.html
+++ b/demo/public/index.html
@@ -7,7 +7,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
 
-  <body>
+  <body style="  margin: 0; padding: 0; height: 100%">
     <div id="<%= htmlWebpackPlugin.options.mountId %>"></div>
   </body>
 </html>
